kubernetes/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: inventory-service
